# qgis-js

./: .clang-format  .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  compile.ts  index.html  init.sh  main.cpp  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qgis-js.ts  tsconfig.json  vcpkg.json  vite.config.ts
.github/workflows/: build.yml
docs/: architecture.md  bundling.md  compatibility.md  debugging.md  performance.md  profiling.md
docs/examples/qgis-js-example-api/: index.html  main.js  package.json  vite.config.js
docs/examples/qgis-js-example-digitize/: index.html  main.js  package.json  style.css
docs/examples/qgis-js-example-features/: index.html  main.js  package.json  style.css  vite.config.js
docs/examples/qgis-js-example-ol/: index.html  main.js  package.json  style.css
etc/: qgis-js-repo.api.json
js/: qgis.html  qgis_utils.js
js/village/: files.json  project.qgs
lib/: QgisApiAdapter.ts  api.ts  emscripten.ts  index.ts  loader.ts  qt.ts  runtime.ts
lib/api/: common.ts  internal.ts  model.ts  public.ts
lib/demo/: demo.css  fs.ts  index.ts  js.ts  ol.ts
lib/fs/: Project.ts
lib/ol/: QgisCanvasDataSource.ts  QgisOl.ts  QgisXYZDataSource.ts
lib/vite/: QgisRuntimePlugin.ts
qt-patches/: egl.patch  patch-qt.sh
sites/dev/: index.html  package.json  vite.config.ts
sites/dev/src/: demo.css  fs.ts  index.ts  js.ts  layers.ts  ol.ts
sites/performance/: .gitignore  index.html  package.json  playwright.config.ts  report.html  vite.config.ts
sites/performance/src/: index.ts
sites/performance/tests/: performance.spec.ts
sites/site/: index.md  package.json
sites/site/.vitepress/: config.mts
sites/site/.vitepress/theme/: Layout.vue  custom.css  fonts.css  index.ts
sites/site/docs/: index.md
sites/site/guide/: about-qgis-js.md  getting-started.md
src/: qgis-js.cpp  qt.conf
src/api/: QgisApi.cpp  QgisApi.ts  QgisIdentify.ts  QgisModel.cpp  QgisModel.ts
src/model/: MapLayer.hpp  MapLayer.ts  PointXY.hpp  PointXY.ts  QVariant.hpp  QgsBox3D.hpp  QgsBox3D.ts  QgsCircle.hpp  QgsCircle.ts  QgsCircularString.hpp  QgsCircularString.ts  QgsCompoundCurve.hpp  QgsCompoundCurve.ts  QgsCurvePolygon.hpp  QgsCurvePolygon.ts  QgsEllipse.hpp  QgsEllipse.ts  QgsExpression.hpp  QgsExpression.ts  QgsExpressionContext.hpp  QgsExpressionContext.ts  QgsFeature.hpp  QgsFeature.ts  QgsFeatureIterator.hpp  QgsFeatureIterator.ts  QgsFeatureRequest.hpp  QgsFeatureRequest.ts  QgsField.hpp  QgsField.ts  QgsFields.hpp  QgsFields.ts  QgsGeometry.hpp  QgsGeometry.ts  QgsGeometryCollection.hpp  QgsGeometryCollection.ts  QgsLayerTreeGroup.hpp  QgsLayerTreeGroup.ts  QgsLayerTreeLayer.hpp  QgsLayerTreeLayer.ts  QgsLayerTreeModelLegendNode.hpp  (+41 more)
vcpkg-ports/gdal/: portfile.cmake
vcpkg-ports/qca-qt6/: vcpkg.json
vcpkg-ports/qgis-qt6/: 05-fix-QT_NO_SSL.patch  07-fix-QgsArcGisRestQueryUtils-includes.patch  09-empty-QgsExpression-Functions.patch  11-disable-openedFileLimit.patch  exiv2-0.28.patch  fix-settings-tree.patch  fix-ssl-network-access-manager.patch  no-exiv.patch  no-tcp-udp-sensors.patch  portfile.cmake  qt6positioning.patch
vcpkg-ports/qt6/: vcpkg-cmake-wrapper.cmake  vcpkg.json
vcpkg-ports/qtkeychain-qt6/: dbus-fix-config.patch  dbus-fix.patch  portfile.cmake
vcpkg-triplets/: my_toolchain.cmake  toolchain.cmake  wasm32-emscripten-qt-threads.cmake
vite/: CrossOriginIsolationPlugin.ts  QgisRuntimePlugin.ts
